- Update project